HTML, CSS and JS: -HTML: --removed hard coded job listings -CSS: --fixed issue with content wrapping -JS: --finished dynamic job listing function

--- a/css/styles.css
+++ b/css/styles.css
@@ -261,6 +261,7 @@ html {
 /* Job Listing Ifo Container */
 .job-listing-info-container {
   height: 1.6rem;
+  width: max-content;
   display: flex;
   align-items: center;
 }
